--- a/Cook/src/app.html
+++ b/Cook/src/app.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;600;700&family=Orbitron:wght@500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;600;700&family=Orbitron:wght@500&family=Roboto:wght@300&display=swap"
       rel="stylesheet"
     />
     %sveltekit.head%
