--- a/Oliveira.js/src/app.html
+++ b/Oliveira.js/src/app.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" href="%sveltekit.assets%/Oliveira.png" />
 		<meta name="viewport" content="width=device-width" />
 		<script src="https://unpkg.com/@phosphor-icons/web"></script>
 		%sveltekit.head%
