Refatorando a aplicação e adicionando novas tags para melhoria de seo.

--- a/Oliveira.js/src/app.html
+++ b/Oliveira.js/src/app.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/assets/Logo.png" />
 		<meta name="viewport" content="width=device-width" />
+		<meta name="description" content="Meu portfólio apresenta meu trabalho como desenvolvedor web, com ênfase em projetos recentes de desenvolvimento de aplicações web utilizando as tecnologias mais modernas.">
 		<script src="https://unpkg.com/@phosphor-icons/web"></script>
 		%sveltekit.head%
 	</head>
